# spheres

./: CMakeLists.txt  CsvUtils.hpp  Geometry.hpp  Separator.hpp  StringUtils.hpp  config.hpp  getopt_wrapper.hpp  main.cpp
tasks/: task1.csv_result.csv  task2.csv  task3.csv  task3.csv_result.csv
tools/: gnuplot.txt  run.sh
